syntax = "proto3";
option go_package = "/.;proto";

message IsEmpty{}

message Pong{
    string id = 1;
}